[metadata]
name = bruttle
version = 0.0.1
author = Aquib Javed T
description = A cli app to bruteforce pdf, zip, and some popular hashes
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tamton-aquib/bruttle

[options]
packages = bruttle
install_requires = 
	pikepdf
	tqdm

[options.entry_points]
console_scripts = 
	bruttle = bruttle.bruttle:main
